@@ -1,11 +1,11 @@
 package com.docloader.security;
 
 import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
-import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -32,22 +32,45 @@ public class SecurityConfig {
     private final JwtAuthenticationFilter jwtAuthFilter;
     private final JwtAuthEntryPoint unauthorizedHandler;
     private final UserDetailsServiceImpl userDetailsService;
+    
+    @Value("${server.cors.allowed-origins:http://localhost:3000}")
+    private String[] allowedOrigins;
+    
+    @Value("${server.cors.allowed-origin-patterns:}")
+    private String[] allowedOriginPatterns;
+    
+    @Value("${server.cors.allow-credentials:true}")
+    private boolean allowCredentials;
+    
+    @Value("${server.cors.max-age:3600}")
+    private long maxAge;
 
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
             .csrf(AbstractHttpConfigurer::disable)
-            .cors(Customizer.withDefaults())
+            .cors(cors -> cors.configurationSource(corsConfigurationSource()))
             .exceptionHandling(exception -> exception.authenticationEntryPoint(unauthorizedHandler))
             .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
             .authorizeHttpRequests(auth -> auth
-                .requestMatchers("/api/auth/**").permitAll()
-                .requestMatchers("/api/health/**").permitAll()
-                .requestMatchers("/api/tenants/register").permitAll()
+                // Public endpoints that don't require authentication
+                .requestMatchers("/auth/login").permitAll()
+                .requestMatchers("/auth/register").permitAll()
+                .requestMatchers("/auth/ping").permitAll()
+                .requestMatchers("/auth/raw-login").permitAll()
+                .requestMatchers("/auth/path-login/**").permitAll()
+                .requestMatchers("/auth/test-login").permitAll()
+                .requestMatchers("/health/**").permitAll()
+                .requestMatchers("/tenants/register").permitAll()
+                .requestMatchers("/test/**").permitAll()
+                // All other requests need authentication
                 .anyRequest().authenticated()
             );
 
+        // Add authentication provider
         http.authenticationProvider(authenticationProvider());
+        
+        // Add JWT filter before UsernamePasswordAuthenticationFilter
         http.addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
         
         return http.build();
@@ -74,10 +97,31 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("*"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-TenantID"));
-        configuration.setExposedHeaders(List.of("Authorization"));
+        
+        // Set allowed origins from properties
+        if (allowedOrigins != null && allowedOrigins.length > 0 && !allowedOrigins[0].isEmpty()) {
+            configuration.setAllowedOrigins(Arrays.asList(allowedOrigins));
+        } else {
+            // Default development origins if none specified
+            configuration.addAllowedOrigin("http://localhost:3000");
+            configuration.addAllowedOrigin("http://localhost:3001");
+        }
+        
+        // Set allowed origin patterns from properties
+        if (allowedOriginPatterns != null && allowedOriginPatterns.length > 0 && !allowedOriginPatterns[0].isEmpty()) {
+            configuration.setAllowedOriginPatterns(Arrays.asList(allowedOriginPatterns));
+        }
+        
+        // Allow credentials
+        configuration.setAllowCredentials(allowCredentials);
+        
+        // Configure allowed methods and headers
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-TenantID", "Accept", "Origin", "X-Requested-With"));
+        configuration.setExposedHeaders(Arrays.asList("Authorization", "X-TenantID"));
+        
+        // Max age for preflight requests
+        configuration.setMaxAge(maxAge);
         
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
